ko3/20カスタムに向けた修正

--- a/introductionCard/20230320/index.html
+++ b/introductionCard/20230320/index.html
@@ -8,7 +8,7 @@
 <h1 id="firstHeading" class="firstHeading mw-first-heading">APEX CUSTOM 2023/3/20<br></h1>
 <body>
 ■結果一覧・ポイントルール<br>
-<a href="">スプレッドシート</a><br><br>
+<a href="https://docs.google.com/spreadsheets/d/1xTrR3TjO8Y-kyp6AUDJ29JTEiGwRLDUwW_wB7fNyKtE/edit?usp=sharing">スプレッドシート</a><br><br>
 ■チーム編成<br>
 <table rules="all" cellSpacing="10">
   <thead>
